<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#37FF3F"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX = "8dp"
        tools:layout_editor_absoluteY = "-127dp">
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical">
<TextView
    android:id="@+id/category1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reading_skills"
    android:textSize="18sp"
    android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/response1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_frequently_confuse_or_reverse_letters_numbers_or_words_while_reading"/>

    <CheckBox
        android:id="@+id/response1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_struggle_with_decoding_or_sounding_out_unfamiliar_words"/>

    <CheckBox
        android:id="@+id/response1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_hava_difficulty_recognizing_sight_words_or_frequently_forget_them"/>

    <TextView
        android:id="@+id/category2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spelling_skills"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/response2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_frequently_misspell_words_even_after_repeated_practice"/>

    <CheckBox
        android:id="@+id/response2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_have_difficulty_remembering_spelling_rules_or_applying_them_consistently"/>

    <CheckBox
        android:id="@+id/response2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_omit_or_mix_up_letters_or_sounds_when_spelling_words"/>


    <TextView
        android:id="@+id/category3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writing_skills"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/response3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_struggle_with_handwriting_such_as_messy_or_illegible_writing"/>

    <CheckBox
        android:id="@+id/response3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_have_difficulty_organizing_thoughts_and_ideas_for_writing_assignments"/>

    <CheckBox
        android:id="@+id/response3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_experience_challenges_with_sentence_structure_grammar_or_punctuation"/>

    <TextView
            android:id="@+id/category4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_comprehension"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/response4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_have_difficulty_understanding_and_remembering_what_they_have_read" />
    <CheckBox
        android:id="@+id/response4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_struggle_to_make_inferences_or_draw_conclusions_from_reading_passages"/>

    <CheckBox
        android:id="@+id/response4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_find_it_challenging_to_summarize_or_retell_the_main_points_of_a_story_or_text"/>


    <TextView
        android:id="@+id/category5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_sequencing"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/response5_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_have_difficulty_remembering_and_recalling_information_such_as_instructions_or_sequences_of_events"/>
    <CheckBox
        android:id="@+id/response5_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/does_the_child_struggle_with_remembering_and_correctly_ordering_numbers_letters_or_steps_in_a_process"/>

<Button
    android:id="@+id/submitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="submit"
    android:onClick="submitAssessment"/>

   </LinearLayout>
    </ScrollView>

</RelativeLayout>